--- a/css/box.css
+++ b/css/box.css
@@ -1,8 +1,21 @@
+section{display: flex;  }
 .box{
-  width: 100px;
-  height: 100px;
-  color: white;
-  line-height: 100px;
-  text-align: center;
-  border-radius: 8px;
-}
+            width: 100px;
+            height: 100px;
+            text-align: center;
+            color: white;
+            border: 2px solid black;
+            margin: 10px;
+        }
+
+        .a{
+            background-color: yellowgreen;
+        }
+
+        .b{
+            background-color: violet;
+        }
+
+        .c{
+            background-color: cornflowerblue;
+        }
