--- a/css/box.css
+++ b/css/box.css
@@ -18,3 +18,15 @@
         .c{
             background-color: cornflowerblue;
         }
+
+        .d{
+            background-color: orange;
+        }
+
+        .e{
+            background-color: tomato;
+        }
+
+        .f{
+            background-color: tan;
+        }
