--- a/css/box.css
+++ b/css/box.css
@@ -20,11 +20,11 @@
         }
 
         .d{
-            background-color: orange;
-        }
-
-        .e{
             background-color: tomato;
+        }
+        
+        .e{
+            background-color: yellow;
         }
 
         .f{
